// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Spin/demo/basic.md correctly 1`] = `
<div
  class="arco-spin"
>
  <span
    class="arco-spin-icon"
  >
    <svg
      aria-hidden="true"
      class="arco-icon arco-icon-loading"
      fill="none"
      focusable="false"
      stroke="currentColor"
      stroke-width="4"
      viewBox="0 0 48 48"
    >
      <path
        d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
      />
    </svg>
  </span>
</div>
`;

exports[`renders Spin/demo/custom-icon.md correctly 1`] = `
<div
  class="arco-spin arco-spin-loading"
>
  <div
    class="arco-spin-children"
  >
    <div
      class="arco-card arco-card-size-default arco-card-bordered"
      style="width:360px"
    >
      <div
        class="arco-card-header"
      >
        <div
          class="arco-card-header-title"
        >
          Arco Card
        </div>
        <div
          class="arco-card-header-extra"
        >
          <span
            class="arco-link"
          >
             More 
          </span>
        </div>
      </div>
      <div
        class="arco-card-body"
      >
        ByteDance's core product, Toutiao ("Headlines"), is a content platform in China and around the world. Toutiao started out as a news recommendation engine and gradually evolved into a platform delivering content in various formats.
      </div>
    </div>
  </div>
  <div
    class="arco-spin-loading-layer"
    style="font-size:30px"
  >
    <span
      class="arco-spin-loading-layer-inner"
    >
      <span
        class="arco-spin-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon-loading arco-icon arco-icon-loading"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          style="font-size:30px"
          viewBox="0 0 48 48"
        >
          <path
            d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`renders Spin/demo/delay.md correctly 1`] = `
Array [
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="display:block;margin-bottom:24px"
    type="button"
  >
    <span>
      Loading: true
    </span>
  </button>,
  <div
    class="arco-spin"
  >
    <div
      class="arco-spin-children"
    >
      <div
        class="arco-card arco-card-size-default arco-card-bordered"
        style="width:360px"
      >
        <div
          class="arco-card-header"
        >
          <div
            class="arco-card-header-title"
          >
            Delay 500ms
          </div>
          <div
            class="arco-card-header-extra"
          >
            <a
              href="#"
              style="color:#165DFF;text-decoration:none"
            >
              More
            </a>
          </div>
        </div>
        <div
          class="arco-card-body"
        >
          ByteDance's core product, Toutiao ("Headlines"), is a content platform in China and around the world. Toutiao started out as a news recommendation engine and gradually evolved into a platform delivering content in various formats.
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders Spin/demo/dot.md correctly 1`] = `
<div
  class="arco-spin"
>
  <span
    class="arco-spin-icon"
  >
    <div
      class="arco-spin-dot-list"
      style="width:"
    >
      <div
        class="arco-spin-dot"
      />
      <div
        class="arco-spin-dot"
      />
      <div
        class="arco-spin-dot"
      />
      <div
        class="arco-spin-dot"
      />
      <div
        class="arco-spin-dot"
      />
    </div>
  </span>
</div>
`;

exports[`renders Spin/demo/size.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:40px"
  >
    <div
      class="arco-spin"
    >
      <span
        class="arco-spin-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-loading"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          style="font-size:20px"
          viewBox="0 0 48 48"
        >
          <path
            d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:40px"
  >
    <div
      class="arco-spin"
    >
      <span
        class="arco-spin-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-loading"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          style="font-size:30px"
          viewBox="0 0 48 48"
        >
          <path
            d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-spin"
    >
      <span
        class="arco-spin-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-loading"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          style="font-size:40px"
          viewBox="0 0 48 48"
        >
          <path
            d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders Spin/demo/spin-component.md correctly 1`] = `
Array [
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="display:block;margin-bottom:24px"
    type="button"
  >
    <span>
      Loading: true
    </span>
  </button>,
  <div
    class="arco-space arco-space-horizontal arco-space-align-center"
  >
    <div
      class="arco-space-item"
      style="margin-right:8px"
    >
      <div
        class="arco-spin arco-spin-loading"
      >
        <div
          class="arco-spin-children"
        >
          <div
            class="arco-card arco-card-size-default arco-card-bordered"
            style="width:100%"
          >
            <div
              class="arco-card-header"
            >
              <div
                class="arco-card-header-title"
              >
                Arco Card
              </div>
              <div
                class="arco-card-header-extra"
              >
                <span
                  class="arco-link"
                >
                   More 
                </span>
              </div>
            </div>
            <div
              class="arco-card-body"
            >
              ByteDance's core product, Toutiao ("Headlines"), is a content platform in China and around the world. Toutiao started out as a news recommendation engine and gradually evolved into a platform delivering content in various formats.
            </div>
          </div>
        </div>
        <div
          class="arco-spin-loading-layer"
        >
          <span
            class="arco-spin-loading-layer-inner"
          >
            <span
              class="arco-spin-icon"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-loading"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="arco-space-item"
    >
      <div
        class="arco-spin arco-spin-loading"
      >
        <div
          class="arco-spin-children"
        >
          <div
            class="arco-card arco-card-size-default arco-card-bordered"
            style="width:100%"
          >
            <div
              class="arco-card-header"
            >
              <div
                class="arco-card-header-title"
              >
                Arco Card
              </div>
              <div
                class="arco-card-header-extra"
              >
                <span
                  class="arco-link"
                >
                   More 
                </span>
              </div>
            </div>
            <div
              class="arco-card-body"
            >
              ByteDance's core product, Toutiao ("Headlines"), is a content platform in China and around the world. Toutiao started out as a news recommendation engine and gradually evolved into a platform delivering content in various formats.
            </div>
          </div>
        </div>
        <div
          class="arco-spin-loading-layer"
        >
          <span
            class="arco-spin-loading-layer-inner"
          >
            <span
              class="arco-spin-icon"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-loading"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="arco-spin arco-spin-loading"
    style="display:block;margin-top:8px"
  >
    <div
      class="arco-spin-children"
    >
      <div
        class="arco-card arco-card-size-default arco-card-bordered"
      >
        <div
          class="arco-card-header"
        >
          <div
            class="arco-card-header-title"
          >
            Arco Card
          </div>
          <div
            class="arco-card-header-extra"
          >
            <span
              class="arco-link"
            >
               More 
            </span>
          </div>
        </div>
        <div
          class="arco-card-body"
        >
          ByteDance's core product, Toutiao ("Headlines"), is a content platform in China and around the world. Toutiao started out as a news recommendation engine and gradually evolved into a platform delivering content in various formats.
        </div>
      </div>
    </div>
    <div
      class="arco-spin-loading-layer"
    >
      <span
        class="arco-spin-loading-layer-inner"
      >
        <span
          class="arco-spin-icon"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-loading"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>,
]
`;

exports[`renders Spin/demo/tip.md correctly 1`] = `
<div
  class="arco-spin arco-spin-loading"
>
  <div
    class="arco-spin-children"
  >
    <div
      class="arco-card arco-card-size-default arco-card-bordered"
      style="width:360px"
    >
      <div
        class="arco-card-header"
      >
        <div
          class="arco-card-header-title"
        >
          Delay 500ms
        </div>
        <div
          class="arco-card-header-extra"
        >
          <span
            class="arco-link"
          >
             More 
          </span>
        </div>
      </div>
      <div
        class="arco-card-body"
      >
        ByteDance's core product, Toutiao ("Headlines"), is a content platform in China and around the world. Toutiao started out as a news recommendation engine and gradually evolved into a platform delivering content in various formats.
      </div>
    </div>
  </div>
  <div
    class="arco-spin-loading-layer"
  >
    <span
      class="arco-spin-loading-layer-inner"
    >
      <span
        class="arco-spin-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-loading"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
          />
        </svg>
      </span>
      <div
        class="arco-spin-tip"
      >
        This may take a while...
      </div>
    </span>
  </div>
</div>
`;
